change margin-left and right to 0 for portfolio section heading, temp space out placeholder for waypoint

--- a/style/index.css
+++ b/style/index.css
@@ -27,3 +27,12 @@
 	margin: 75% 43%;
 }
 
+#portfolio-heading-row {
+	margin-left: 0;
+	margin-right: 0;
+}
+
+#about-placeholder {
+	height: 1px;
+}
+
