--- a/style/index.css
+++ b/style/index.css
@@ -1,23 +1,3 @@
-/*html, body {
-	height: 100%;
-	width: 100%;
-	padding: 0;
-	margin: 0;
-	background: #FAFAFA;
-	font-family: 'Helvetica Neue', arial, sans-serif;
-	font-weight: 400;
-	color: #444;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
-
-* {
-	box-sizing: border-box;
-}
-
-#app {
-	height: 100%;
-}*/
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
   font-family: "Open Sans", Helvetica, Arial, sans-serif !important;
 }
@@ -31,3 +11,11 @@
 	height: 1px;
 }
 
+.header-enter {
+  opacity: 0.01;
+}
+
+.header-enter.header-enter-active {
+  opacity: 1;
+  transition: opacity 750ms ease-in;
+}
