--- a/style/style.default.css
+++ b/style/style.default.css
@@ -1369,8 +1369,9 @@ SOCIAL LINKS
   margin-bottom: 20px;
 }
 p.social {
-  text-align: center;
+  text-align: right;
   margin-top: 20px;
+  margin-bottom: -60px;
 }
 p.social a {
   margin: 0 10px 0 0;
@@ -1386,7 +1387,7 @@ p.social a {
   -moz-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
   vertical-align: bottom;
-  border: solid 1px #ccc;
+  /*border: solid 1px #ccc;*/
 }
 p.social a i {
   vertical-align: bottom;
@@ -1403,6 +1404,14 @@ p.social a.gplus {
 p.social a.twitter {
   background-color: #3cf;
   border-color: #3cf;
+}
+p.social a.linkedin {
+  background-color: #3cf;
+  border-color: #3cf;
+}
+p.social a.github {
+  background-color: black;
+  border-color: black;
 }
 p.social a.instagram {
   background-color: #cd4378;
@@ -1421,6 +1430,14 @@ p.social.social--outline a {
 }
 p.social.social--outline a.facebook {
   color: #4460ae;
+  border-color: #4460ae;
+}
+p.social.social--outline a.github {
+  color: black;
+  border-color: black;
+}
+p.social.social--outline a.linkedin {
+  color: rgb(0, 119, 181);
   border-color: #4460ae;
 }
 p.social.social--outline a.gplus {
