--- a/components/PortfolioImage/style.css
+++ b/components/PortfolioImage/style.css
@@ -1,3 +1,10 @@
 .card-back {
   height: 100%;
 }
+
+.thumbnail-links {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+}
