--- a/style/style.default.scss
+++ b/style/style.default.scss
@@ -14,6 +14,28 @@ GENERAL
 =====================
 
 */
+/* === Open Sans - 300 */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 300;
+
+  src: local("Open Sans Light"),
+    local("OpenSans-Light"),
+    url("../assets/font/OpenSans-Light.woff2") format("woff2");
+}
+
+/* === Open Sans - 700 */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 700;
+
+  src: local("Open Sans Bold"),
+    local("OpenSans-Bold"),
+    url("../assets/font/OpenSans-Bold.woff2") format("woff2");
+}
+
 html {
   height: 100%;
 }
@@ -536,7 +558,7 @@ STYLE SWITCHER FOR DEMO
 }
 /* navbar */
 .navbar {
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   min-height: 100px;
   margin-bottom: 0;
   border-top: none;
@@ -823,7 +845,7 @@ STYLE SWITCHER FOR DEMO
 }
 /* scaffolding */
 body {
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.55;
   color: #000000;
@@ -900,7 +922,7 @@ hr {
 /* buttons  */
 .btn {
   font-weight: 700;
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   letter-spacing: 0.1em;
   padding: 6px 12px;
@@ -1029,7 +1051,7 @@ fieldset[disabled] .btn-transparent.active {
 }
 /* labels */
 .label {
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   font-weight: normal;
   text-transform: uppercase;
 }
@@ -1194,7 +1216,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   font-weight: 700;
   line-height: 1.2;
   color: #000000;
@@ -1428,4 +1450,24 @@ p.social.social--outline a.twitter {
 #portfolio [class*="col-"] {
   padding-left: 0;
   padding-right: 0;
+}
+
+.navbar,
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+body,
+.label,
+.btn  {
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
 }
