--- a/style/style.default.scss
+++ b/style/style.default.scss
@@ -1469,5 +1469,27 @@ h6,
 body,
 .label,
 .btn  {
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+.fonts-loaded {
+  .navbar,
+  body,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  .h1,
+  .h2,
+  .h3,
+  .h4,
+  .h5,
+  .h6,
+  body,
+  .label,
+  .btn  {
+    font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  }
 }
